# assignments

./: .gitignore
lab1/: README.md
lab2/: README.md
lab2/src/turtlesim_waypoints/: CMakeLists.txt  package.xml
lab2/src/turtlesim_waypoints/config/: turtlesim_goals.yaml
lab2/src/turtlesim_waypoints/launch/: turtlesim_waypoints.launch.py
lab2/src/turtlesim_waypoints/turtlesim_waypoints/: gotogoal.py
lab3/: README.md
lab3/src/bringup/: CMakeLists.txt  package.xml
lab3/src/bringup/launch/: main.launch.py
lab3/src/bringup/rviz/: nav2_default_view.rviz
lab3/src/obstacle_detection/obstacle_detection/: obstacle_detection.py
