<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlesim_waypoints</name>
  <version>0.0.1</version>
  <description>A simple Go to Goal controller for TurtleSim in ROS2</description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>